[update] user info
